# liara_lang

./: .gitattributes  Cargo.toml  README.md  example1.liara  readme.md
src/: lia.rs  liarac.rs  lib.rs  main.rs
src/parsing/: ast.rs  builtins.rs  bytecode.rs  mod.rs  parser.rs  tokenizer.rs
src/semantic_evaluation/: mod.rs  semantic_ast.rs  semantic_eval.rs
